# Python-Compile-Tools

./: .gitignore  .pylintrc  .pytest.ini  .ruff.toml  Makefile  README.md  pyproject.toml  requirements_dev.txt  test.sh  validate.sh
.github/workflows/: validate-code.yml
personal_compile_tools/: __init__.py  converters.py  dependencies.py  file_operations.py  modules.py  requirement_operators.py  requirements.py  validation.py
tests/: conftest.py  test_converter.py  test_dependencies.py  test_file_operations.py  test_modules.py  test_requirements.py  test_validation.py
tests/requirements_examples/: requirements.txt
tests/test_folder/: requirements.txt
